clear JDK21 Preview:String Template